refactor!: improve admin and extractor api definition (#12)
Make the api definition more generic. One endpoint in the admin backend for files and one for sources like confluence etc.

The extractor endpoints have been adjusted as well.
